--- a/index.html
+++ b/index.html
@@ -34,12 +34,13 @@
         </div>
     </nav>
 
+
     <div class="for-bg">
     <div class="banner-container">
         
         <div class="banner-left">
            <h2>PLAY LIKE THE</h2>
-           <div><h1>G.O.A.T</h1></div>
+           <div><h1>G.O.A.T.</h1></div>
            <div class="play"><i class="fa-solid fa-circle-play fa-sm" style="color: #ff2600;"></i></i><h5>1-click instant play</h5></div>
            <div class="download"><i class="fa-solid fa-download fa-sm" style="color: #ff2600;"></i></i></i><h5>No Download</h5></div>
            <div class="human"><i class="fa-regular fa-user fa-sm"></i><h5>1000s of supported online games</h5></div>
@@ -76,11 +77,47 @@
        <div class="online"><h1>Online Games <span>Funny Videos</span></h1>
          <br><h5>A Collection of Hilarious Videos to Brighten Your Day</h5></div>
          
-       <div class="online-games-videos">
-           <div class=""><img src="./images/Rectangle 4.png"><h5>No Download. No Installs. Play<br>games Instantly on Gamer.</h5></div>
-           <div class=""><img src="./images/Rectangle 5.png"><h5>Did you score? #unblockedgames <br>#school</h5></div>
-           <div class=""><img src="./images/Rectangle 7.png"><h5>Breaking game records<br>like OG</h5></div>
-           <div class=""><img src="./images/Rectangle 6.png"><h5>Busted gaming on school laptop,<br>but you are still lit.</h5></div>
+    <div class="online-games-videos">        
+        <div class="rec-video">
+            <div class="overlay-icon">
+                <div class="video-text">
+                    <img src="./images/youtube.png">
+                    <h4>Watch Now</h4>
+                </div>
+            </div>
+            <img src="./images/Rectangle 4.png">
+            <p class="video-caption">No Download. No Installs. Play games Instantly on Gamer.</p>
+        </div>
+        <div class="rec-video">
+            <div class="overlay-icon">
+                <div class="video-text">
+                    <img src="./images/youtube.png">
+                    <h4>Watch Now</h4>
+                </div>
+            </div>
+            <img src="./images/Rectangle 5.png">
+            <p class="video-caption">No Download. No Installs. Play games Instantly on Gamer.</p>
+        </div>
+        <div class="rec-video">
+            <div class="overlay-icon">
+                <div class="video-text">
+                    <img src="./images/youtube.png">
+                    <h4>Watch Now</h4>
+                </div>
+            </div>
+            <img src="./images/Rectangle 7.png">
+            <p class="video-caption">No Download. No Installs. Play games Instantly on Gamer.</p>
+        </div>
+        <div class="rec-video">
+            <div class="overlay-icon">
+                <div class="video-text">
+                    <img src="./images/youtube.png">
+                    <h4>Watch Now</h4>
+                </div>
+            </div>
+            <img src="./images/Rectangle 6.png">
+            <p class="video-caption">No Download. No Installs. Play games Instantly on Gamer.</p>
+        </div>
        </div>
 
 
@@ -100,10 +137,11 @@
         <div class="main-img">
             <img src="images/Rectangle 55.png">
             <div class="inner-img">
-                <img src="images/Rectangle 66.png">
+                <img class="rec" src="images/Rectangle 66.png">
             </div>
         </div>
     </section>
+
 
 
 
@@ -144,7 +182,7 @@
          <div><i class="fa-brands fa-twitter fa-xl" style="color: #ffffff;"></i></div>
          <div><i class="fa-brands fa-facebook fa-xl" style="color: #ffffff;"></i></div>
          <div><i class="fa-brands fa-youtube fa-xl" style="color: #ff0000;"></i></div>
-         <div><i class="fa-brands fa-linkedin fa-xl" style="color: #ffffff;"></i></div>
+         <div><i class="fa-brands fa-linkedin-in fa-xl" style="color: #ffffff;"></i></i></div>
          <div><i class="fa-brands fa-instagram fa-xl" style="color: #ffffff;"></i></div>
          <div><i class="fa-brands fa-apple fa-xl" style="color: #ffffff;"></i></div>
     </div>
