--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
                 and play instantly in your browser.</p>
         </div>
         <div class="main-img">
-            <img src="images/Rectangle 55.png">
-            <div class="inner-img">
-                <img class="rec" src="images/Rectangle 66.png">
+            <img id="rec55" src="images/Rectangle 55.png">
+            <div class="img-big">
+                <img  class="rec" id="rec66" src="images/Rectangle 66.png">
             </div>
         </div>
     </section>
@@ -149,14 +149,14 @@
         <div class="btn-with-logo-all-button">
             
             <button class="btn-inner"><img src="./images/Rectangle 11.png"><h3>Action Games</h3></button>
-            <button class="btn-inner"><img src="./images/Rectangle 12.png"><h3>Action Games</h3></button>
-            <button class="btn-inner"><img src="./images/Rectangle 13.png"><h3>Action Games</h3></button>
-            <button class="btn-inner"><img src="./images/Rectangle 14.png"><h3>Action Games</h3></button>
-            <button class="btn-inner"><img src="./images/Rectangle 15.png"><h3>Action Games</h3></button>
-            <button class="btn-inner"><img src="./images/Rectangle 16.png"><h3>Action Games</h3></button>
-            <button class="btn-inner"><img src="./images/Rectangle 17.png"><h3>Action Games</h3></button>
-            <button class="btn-inner"><img src="./images/Rectangle 18.png"><h3>Action Games</h3></button>
-            <button class="btn-inner"><img src="./images/Rectangle 19.png"><h3>Action Games</h3></button>         
+            <button class="btn-inner"><img src="./images/Rectangle 12.png"><h3>Adventure Games</h3></button>
+            <button class="btn-inner"><img src="./images/Rectangle 13.png"><h3>Arcade Games</h3></button>
+            <button class="btn-inner"><img src="./images/Rectangle 14.png"><h3>Educational Games</h3></button>
+            <button class="btn-inner"><img src="./images/Rectangle 15.png"><h3>Word Games</h3></button>
+            <button class="btn-inner"><img src="./images/Rectangle 16.png"><h3>Role Playing Games</h3></button>
+            <button class="btn-inner"><img src="./images/Rectangle 17.png"><h3>Music & Audio Games</h3></button>
+            <button class="btn-inner"><img src="./images/Rectangle 18.png"><h3>Puzzle Games</h3></button>
+            <button class="btn-inner"><img src="./images/Rectangle 19.png"><h3>Strategy Games</h3></button>         
             
         </div>
     </section>
